force-app/main/default/objects/Movie_object__c/Movie_object__c.object-meta.xml
<CustomObject>
    <label>Movie object</label>
    <nameField>
        <label>Movie object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movie objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>