force-app/main/default/objects/Movie_object__c/fields/EstimatedActorCosts__c.field-meta.xml
<CustomField>
    <fullName>EstimatedActorCosts__c</fullName>
    <label>Estimated Actor Costs</label>
    <summarizedField>Cast__c.EstimatedCosts__c</summarizedField>
    <summaryForeignKey>Cast__c.Movie__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>