force-app/main/default/objects/Movie_object__c/fields/Raiting__c.field-meta.xml
<CustomField>
    <fullName>Raiting__c</fullName>
    <label>Raiting</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>