force-app/main/default/objects/Movie_object__c/fields/RaitingCalculated__c.field-meta.xml
<CustomField>
    <fullName>RaitingCalculated__c</fullName>
    <formula>Raiting__c  * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raiting(Calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>