force-app/main/default/objects/Movie_object__c/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <description>calculation</description>
    <formula>PlannedProductionStartDate__c  +  Script__r.ProductionDays__c  +  Script__r.PostproductionDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Estimated Release Date</label>
    <type>Date</type>
</CustomField>