force-app/main/default/objects/Movie_object__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Script</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Movie objects</relationshipLabel>
    <relationshipName>Movie_objects</relationshipName>
    <type>Lookup</type>
</CustomField>