force-app/main/default/objects/Movie_object__c/fields/tmdbId__c.field-meta.xml
<CustomField>
    <fullName>tmdbId__c</fullName>
    <label>tmdbId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>